# dna-entropy

./: .gitignore  CLAUDE.md  README.md  dna-entropy.spec  pyproject.toml
docs/: DESIGN.md  DISTRIBUTION.md  EVO_SETUP.md  ROADMAP.md
packaging/: build_exe.ps1  launcher.py
scripts/: demo.ps1  evo_run.sh  gpu_diag.sh  gpu_flashattn.sh  gpu_probe.sh  gpu_setup.sh  vm_setup.sh
src/dna_entropy/: __init__.py  cli.py  config.py  pipeline.py
src/dna_entropy/analysis/: __init__.py  entropy.py
src/dna_entropy/annotators/: __init__.py  base.py  prodigal.py
src/dna_entropy/cloud/: __init__.py  gcloud.py  orchestrator.py  ui.py
src/dna_entropy/predictors/: __init__.py  base.py  evo.py  logits.py  mock.py
src/dna_entropy/readers/: __init__.py  base.py  paste.py
src/dna_entropy/validation/: __init__.py  validators.py
src/dna_entropy/writers/: __init__.py  base.py  bedgraph.py  fasta.py  gff.py  summary.py  wig.py
tests/: conftest.py  test_annotator.py  test_cloud.py  test_entropy.py  test_evo_logits.py  test_evo_predictor.py  test_gff.py  test_mock_predictor.py  test_pipeline.py  test_readers.py  test_validation.py  test_writers.py
tests/data/: prokaryotic_demo.fasta  sample.fasta
